syntax = "proto3";

package chain;
option go_package = "github.com/figment-networks/oasis-rpc-proxy/grpc/chain/chainpb";

import "google/protobuf/timestamp.proto";

message Chain {
    string Id = 1;
    string Name = 2;
    google.protobuf.Timestamp GenesisTime = 3;
    int64 Height = 4;
}

message GetCurrentRequest {}

message GetCurrentResponse {
    Chain Chain = 1;
}

service ChainService {
    rpc GetCurrent (GetCurrentRequest) returns (GetCurrentResponse) {};
}